docs/test_deploys/ingress-3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ingress-3.bar.com
      http:
        paths:
          - path: /api
            backend:
              serviceName: service1
              servicePort: 8888
