docs/test_deploys/ingress-7.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-7
spec:
  rules:
    - host: www.indiehackers.com
      http:
        paths:
          - path: /
            backend:
              serviceName: service1
              servicePort: 8888
