docs/test_deploys/ingress-9.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-9
spec:
  rules:
    - host: gcp-console.managedkube.com
      http:
        paths:
          - path: /
            backend:
              serviceName: service1
              servicePort: 8888
